add first version of user_reports and some corrections of sprint 2
